--- a/filehtml.html
+++ b/filehtml.html
@@ -1,174 +1,274 @@
+<iframe src="https://your-wix-site-url.com" width="100%" height="600px"></iframe>
 <!-- Google Fonts: Keeping Raleway -->
-    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@300;500;700&display=swap" rel="stylesheet">
+<link
+  href="https://fonts.googleapis.com/css2?family=Raleway:wght@300;500;700&display=swap"
+  rel="stylesheet"
+/>
 
-    <!-- Navigation Bar -->
-    <nav>
-        <div class="title-container">
-            <h1>Neema AI</h1>
-            <h2>Artificial Intelligence Expert</h2>
-        </div>
-        <div class="nav-links">
-            <a href="about.html">About</a>
-            <a href="projects.html">Projects</a>
-            <a href="contacts.html">Contacts</a>
-            <a href="blog.html">Blog</a>
-            <a href="show.html">Show</a>
-            <a href="course.html">Course</a>
-        </div>
-    </nav>
+<!-- Navigation Bar -->
+<nav>
+  <div class="title-container">
+    <h1>Neema AI</h1>
+    <h2>Artificial Intelligence Expert</h2>
+  </div>
+  <div class="nav-links">
+    <a href="about.html">About</a>
+    <a href="projects.html">Projects</a>
+    <a href="contacts.html">Contacts</a>
+    <a href="blog.html">Blog</a>
+    <a href="show.html">Show</a>
+    <a href="course.html">Course</a>
+  </div>
+</nav>
 
-    <!-- Profile Picture -->
-    <div class="photo-container">
-        <img src="Untitled design.png" alt="Your Picture">
-    </div>
+<!-- Profile Picture -->
+<div class="photo-container">
+  <img
+    src="https://lh3.googleusercontent.com/d/1bnOms_4KmqEV9sG3wePoz92jaxT70KOx"
+  />
+</div>
 
-    <!-- People I Have Worked With Section -->
-    <div class="image-carousel-container">
-        <div class="image-carousel-title">People I Have Worked With</div>
-        <div class="image-carousel">
-            <img src="image1.jpg" alt="Person 1">
-            <img src="image2.jpg" alt="Person 2">
-            <img src="image3.jpg" alt="Person 3">
-            <img src="image4.jpg" alt="Person 4">
-            <img src="image5.jpg" alt="Person 5">
-        </div>
-    </div>
+<!-- People I Have Worked With Section -->
+<div class="image-carousel-container">
+  <div class="image-carousel-title">People I Have Worked With</div>
+  <div class="image-carousel">
+    <img
+      src="https://lh3.googleusercontent.com/d/1WWL274psGLgkZdPaMg3A7iVL_sqWDe62"
+      alt="Person 1"
+    />
+    <img
+      src="https://lh3.googleusercontent.com/d/1SJ6Vdty4IX55o8QuXsLdqf-_W9XExrv5"
+      alt="Person 2"
+    />
+    <img
+      src="https://lh3.googleusercontent.com/d/1vBI5GrD9yLiD2KQKNiIkeaaxMAoiP7Iy"
+      alt="Person 3"
+    />
+    <img
+      src="https://lh3.googleusercontent.com/d/1rW1f_mkh9GSMd30P1RXXx1h4F4V9J3Rq"
+      alt="Person 4"
+    />
+    <img
+      src="https://lh3.googleusercontent.com/d/1fScUY6VfCE4Ye2HMeAxs1jdC3geWhYFm"
+      alt="Person 5"
+    />
+    <img src="image2.jpg" alt="Person 6" />
+    <img
+      src="https://lh3.googleusercontent.com/d/1cmwehQEA3GPz6oTMc54kG3U5Moa-6la7"
+      alt="Person 7"
+    />
+    <img
+      src="https://lh3.googleusercontent.com/d/1qZ3ur_6eT0ck9YbRsc3PgB_ELon8zotS"
+      alt="Person 8"
+    />
+    <img
+      src="https://lh3.googleusercontent.com/d/1EPJ37GjqRpkgR-635c2rSvLvtRu_vVuP"
+      alt="Person 9"
+    />
+    <img
+      src="https://lh3.googleusercontent.com/d/1KhjN0BaFRzPhnJVKPHp_tkLV4z2KZrrG"
+      alt="Person 10"
+    />
+    <img
+      src="https://lh3.googleusercontent.com/d/1TDaoN-Z67_uflMM4R-Hm5izYfoYmMoP_"
+      alt="Person 11"
+    />
+    <img
+      src="https://lh3.googleusercontent.com/d/1VNLSeS07K3wnvaY6rN7V9LBGuqOw14tK"
+      alt="Person 12"
+    />
+    <img
+      src="https://lh3.googleusercontent.com/d/1FKGCRI4oasoC8tJ3ks2d-DMlOHOp7Edi"
+      alt="Person 13"
+    />
+    <img
+      src="https://lh3.googleusercontent.com/d/1vUMo5T9L6_gzAr4B3mZI6OeRYW35EFiG"
+      alt="Person 14"
+    />
+    <img
+      src="https://lh3.googleusercontent.com/d/1SDy8xZpmfK4GQ8oKOJiNyq42Tb2evFqx"
+      alt="Person 15"
+    />
+    <img
+      src="https://lh3.googleusercontent.com/d/1K0YD-Z-fP2KJvxlQCSDAvpAmmZ7TcRFs"
+      alt="Person 16"
+    />
+    <img
+      src="https://lh3.googleusercontent.com/d/1Q8nDaMChGvl1bsaTGR-Jryq49qj9tCJt"
+      alt="Person 17"
+    />
+    <img
+      src="https://lh3.googleusercontent.com/d/1BedPe21aVJD0VgUKPENsHem7J2EY2Fm5"
+      alt="Person 18"
+    />
+    <img
+      src="https://lh3.googleusercontent.com/d/1leqUfmIGm1voD482qr5ukFbSdjJ479e-"
+      alt="Person 19"
+    />
+  </div>
+</div>
 
-    <!-- About the CEO Section -->
-    <div class="about-ceo">
-        <div class="ceo-photo">
-            <img src="ceo.jpg" alt="CEO Photo">
-        </div>
-        <div class="ceo-text">
-            <h2 class="ceo-title">
-                <a href="about.html">About the CEO</a>
-            </h2>
-            <p>
-                 I am an expert in Artificial Intelligence with a strong background in data science,
-            software development, and digital transformation. I specialize in creating AI solutions 
-            that emphasize ethical, transparent, and human-centered approaches. My experience covers
-            software engineering, AI education, and Ethics.
-                As a Public speaker and EMCEE, I captivate audiences with thought-provoking messages, 
-            encouraging both individuals and companies to embrace the ethical dimensions of AI towards
-            a future that benefits everyone.
-            </p>
-        </div>
-    </div>
+<!-- About the CEO Section -->
+<div class="about-ceo">
+  <div class="ceo-photo">
+    <img
+      src="https://lh3.googleusercontent.com/d/1pKvE_uXwM_-_a_k5_w_4kpo4IKFFZe9L"
+      alt="CEO Photo"
+    />
+  </div>
+  <div class="ceo-text">
+    <h2 class="ceo-title">
+      <a href="about.html">About the CEO</a>
+    </h2>
+    <p>
+      I am an expert in Artificial Intelligence with a strong background in data
+      science, software development, and digital transformation. I specialize in
+      creating AI solutions that emphasize ethical, transparent, and
+      human-centered approaches. My experience covers software engineering, AI
+      education, and Ethics. As a Public speaker and EMCEE, I captivate
+      audiences with thought-provoking messages, encouraging both individuals
+      and companies to embrace the ethical dimensions of AI towards a future
+      that benefits everyone.
+    </p>
+  </div>
+</div>
 
-    <!-- Projects Section -->
-    <div class="projects-section">
-        <h2>Projects</h2>
-        <div class="projects-grid">
-            <div class="project-tile">Project 1</div>
-            <div class="project-tile">Project 2</div>
-            <div class="project-tile">Project 3</div>
-            <div class="project-tile">Project 4</div>
-            <div class="project-tile">Project 5</div>
-            <div class="project-tile">Project 6</div>
-        </div>
-    </div>
+<!-- Projects Section -->
+<div class="projects-section">
+  <h2>Projects</h2>
+  <div class="projects-grid">
+    <div class="project-tile">Project 1</div>
+    <div class="project-tile">Project 2</div>
+    <div class="project-tile">Project 3</div>
+    <div class="project-tile">Project 4</div>
+    <div class="project-tile">Project 5</div>
+    <div class="project-tile">Project 6</div>
+  </div>
+</div>
 <!-- Contact Me Section -->
 <div class="contact-me">
-    <h2>Contact Me</h2>
+  <h2>Contact Me</h2>
 
-    <div class="contact-group">
-        <h3>English</h3>
-        <div class="contact-grid">
-            <div class="contact-item">
-                <img src="tiktok-logo.png" alt="TikTok">
-                <p>@YourTikTokHandle</p>
-            </div>
-            <div class="contact-item">
-                <img src="x-logo.png" alt="X">
-                <p>@YourXHandle</p>
-            </div>
-            <div class="contact-item">
-                <img src="linkedin-logo.png" alt="LinkedIn">
-                <p>@YourLinkedInHandle</p>
-            </div>
-            <div class="contact-item">
-                <img src="instagram-logo.png" alt="Instagram">
-                <p>@YourInstagramHandle</p>
-            </div>
-        </div>
+  <div class="contact-group">
+    <h3>NEEMA AI</h3>
+    <div class="contact-grid">
+      <div class="contact-item">
+        <img
+          src="https://lh3.googleusercontent.com/d/1G1hjp0lIctaXcHfiyQOQnqSPRIWgCBQY"
+          alt="TikTok"
+        />
+        <p><a href="https://www.tiktok.com/@neema_ai">@Neema AI</a></p>
+      </div>
+      <div class="contact-item">
+        <img
+          src="https://lh3.googleusercontent.com/d/1_aroED7nbeHufAErhReg77xsPjfLj-Kf"
+          alt="LinkedIn"
+        />
+        <p>
+          <a
+            href="https://www.linkedin.com/company/neema-artificial-intelligence/"
+            >@Neema AI</a
+          >
+        </p>
+      </div>
+      <div class="contact-item">
+        <img
+          src="https://lh3.googleusercontent.com/d/1Vltt4kRUvPI5rxw7WyQlZLRqTGUxvZWy"
+          alt="Instagram"
+        />
+        <p>
+          <a
+            href="https://www.instagram.com/neema_ai?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw=="
+            >@neema_ai</a
+          >
+        </p>
+      </div>
     </div>
-
-    <div class="contact-group">
-        <h3>Catalan</h3>
-        <div class="contact-grid">
-            <div class="contact-item">
-                <img src="tiktok-logo.png" alt="TikTok">
-                <p>@YourSecondTikTokHandle</p>
-            </div>
-            <div class="contact-item">
-                <img src="x-logo.png" alt="X">
-                <p>@YourSecondXHandle</p>
-            </div>
-            <div class="contact-item">
-                <img src="linkedin-logo.png" alt="LinkedIn">
-                <p>@YourSecondLinkedInHandle</p>
-            </div>
-            <div class="contact-item">
-                <img src="instagram-logo.png" alt="Instagram">
-                <p>@YourSecondInstagramHandle</p>
-            </div>
-        </div>
-    </div>
+  </div>
 </div>
-  <!--Links to Blog section -->
-    <!-- Blog Section -->
-    <section id="blog">
-        <h2>Blog</h2>
-        <p>Welcome to my blog! Here, I'll share my thoughts on various topics.</p>
 
-        <div class="blog-container">
-            <!-- Blog Post Boxes -->
-            <div class="blog-post">
-                <img src="image1.jpg" alt="Blog Post 1">
-                <div class="blog-text">Blog Post 1</div>
-            </div>
-            <div class="blog-post">
-                <img src="image2.jpg" alt="Blog Post 2">
-                <div class="blog-text">Blog Post 2</div>
-            </div>
-            <div class="blog-post">
-                <img src="image3.jpg" alt="Blog Post 3">
-                <div class="blog-text">Blog Post 3</div>
-            </div>
-            <div class="blog-post">
-                <img src="image4.jpg" alt="Blog Post 4">
-                <div class="blog-text">Blog Post 4</div>
-            </div>
-            <div class="blog-post">
-                <img src="image5.jpg" alt="Blog Post 5">
-                <div class="blog-text">Blog Post 5</div>
-            </div>
-            <div class="blog-post">
-                <img src="image6.jpg" alt="Blog Post 6">
-                <div class="blog-text">Blog Post 6</div>
-            </div>
-        </div>
-    </section>
+<div class="contact-group">
+  <h3>Neema</h3>
+  <div class="contact-grid">
+    <div class="contact-item">
+      <img
+        src="https://lh3.googleusercontent.com/d/1APqqHw74OwSblRJLamNf06ElKlKfjB8r"
+        alt="X"
+      />
+      <p><a href="https://x.com/NeemaBal">@Neema Nelly</a></p>
+    </div>
+    <div class="contact-item">
+      <img
+        src="https://lh3.googleusercontent.com/d/1_aroED7nbeHufAErhReg77xsPjfLj-Kf"
+        alt="LinkedIn"
+      />
+      <p>
+        <a href="https://www.linkedin.com/in/neema-balolebwami-nelly-8a2226107/"
+          >@Neema Nelly</a
+        >
+      </p>
+    </div>
+    <div class="contact-item">
+      <img
+        src="https://lh3.googleusercontent.com/d/1Vltt4kRUvPI5rxw7WyQlZLRqTGUxvZWy"
+        alt="Instagram"
+      />
+      <p>
+        <a
+          href="https://www.instagram.com/speaker_nema?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw=="
+          >@speaker_nema</a
+        >
+      </p>
+    </div>
+  </div>
+</div>
+<!--Links to Blog section -->
+<!-- Blog Section -->
+<section id="blog">
+  <h2>Blog</h2>
+  <p>Welcome to my blog! Here, I'll share my thoughts on various topics.</p>
 
-   <!-- Show Section -->
+  <div class="blog-container">
+    <!-- Blog Post Boxes -->
+    <div class="blog-post">
+      <img src="image1.jpg" alt="Blog Post 1" />
+      <div class="blog-text">Blog Post 1</div>
+    </div>
+    <div class="blog-post">
+      <img src="image2.jpg" alt="Blog Post 2" />
+      <div class="blog-text">Blog Post 2</div>
+    </div>
+    <div class="blog-post">
+      <img src="image3.jpg" alt="Blog Post 3" />
+      <div class="blog-text">Blog Post 3</div>
+    </div>
+    <div class="blog-post">
+      <img src="image4.jpg" alt="Blog Post 4" />
+      <div class="blog-text">Blog Post 4</div>
+    </div>
+    <div class="blog-post">
+      <img src="image5.jpg" alt="Blog Post 5" />
+      <div class="blog-text">Blog Post 5</div>
+    </div>
+    <div class="blog-post">
+      <img src="image6.jpg" alt="Blog Post 6" />
+      <div class="blog-text">Blog Post 6</div>
+    </div>
+  </div>
+</section>
+
+<!-- Show Section -->
 <section id="show">
-    <h2>Show</h2>
-    <p>Discover highlights from the latest AI discussions, events, and presentations.</p>
+  <h2>Show</h2>
+  <p>
+    Discover highlights from the latest AI discussions, events, and
+    presentations.
+  </p>
 
-    <!-- Large Image Display -->
-    <div class="show-image-container">
-        <img src="show-image.jpg" alt="Show Highlight">
-    </div>
-
-    <!-- Embedded YouTube Video -->
-    <div class="show-video-container">
-        <iframe 
-            width="560" 
-            height="315" 
-            src="https://www.youtube.com/embed/YOUR_VIDEO_ID" 
-            title="Show Video"
-            frameborder="0"
-            allowfullscreen>
-        </iframe>
-    </div>
+  <!-- Large Image Display -->
+  <div class="show-image-container">
+    <img src="https://lh3.googleusercontent.com/d/1L4sPXJONwRtw3tuq1Tp-iyrb3m06MR-W" alt="Show Highlight" />
+  </div>
+    </iframe>
+  </div>
 </section>
