--- a/filehtml.html
+++ b/filehtml.html
@@ -24,7 +24,7 @@
     <a href="#contacts">Contacts</a>
     <a href="#blog">Blog</a>
     <a href="#show">Show</a>
-    <a href="#course">Course</a>
+    <a href="course.html">Course</a>
   </div>
 </nav>
 </nav>
