--- a/filehtml.html
+++ b/filehtml.html
@@ -20,21 +20,33 @@
  <nav>
   <div class="nav-links">
     <a href="#about">About</a>
-    <a href="#projects">Projects</a>
-    <a href="#contacts">Contacts</a>
+    <a href="#services">Services</a>
     <a href="#blog">Blog</a>
     <a href="#show">Show</a>
     <a href="course.html">Course</a>
+    <a href="#contacts">Contacts</a>
   </div>
 </nav>
 </nav>
 
 <!-- Profile Picture -->
-<div class="photo-container">
-  <img
-    src="https://lh3.googleusercontent.com/d/1bnOms_4KmqEV9sG3wePoz92jaxT70KOx"
-  />
-</div>
+<section class="hero-banner">
+  <div class="hero-text">
+    <h1>Neema Balolebwami Nelly</h1>
+    <p>
+      AI Ethics Expert | Corporate AI Trainer | Keynote Speaker<br>
+      Responsible AI Engineer | Bias Mitigation Specialist
+    </p>
+    <a href="https://www.linkedin.com/in/neema-balolebwami-nelly-8a2226107/" class="hero-btn">LinkedIn</a>
+  </div>
+  <div class="hero-scroll-images">
+    <img src="https://lh3.googleusercontent.com/d/1Q51wbiIk4MA0xJpvkaGBET2hLqr_OjvX" alt="Slide 1">
+    <img src="https://lh3.googleusercontent.com/d/1MtREDtY4_XoFdL6HZmtwZNa02yJz6ju3" alt="Slide 2">
+    <img src="https://lh3.googleusercontent.com/d/1DxySrYLdWaalAIsdQc2ojHF5gTM7slgi" alt="Slide 3">
+    <img src="https://lh3.googleusercontent.com/d/1ENs10V3ZsZkbedtImTNJ6HQdwTHTPlbj" alt="Slide 4">
+    <img src="https://lh3.googleusercontent.com/d/1aGA7ccc6HrAHox0YJwX-LEYvkHqzeX0Q" alt="Slide 5">
+  </div>
+</section>
 
 <!-- People I Have Worked With Section -->
 <div class="image-carousel-container">
@@ -114,11 +126,8 @@
       alt="Person 19"
     />
   </div>
-</div>
-
 <!-- About the CEO Section -->
 <section id="about">
-  <h2>About Neema</h2>
 </section>
 <div class="about-ceo">
   <div class="ceo-photo">
@@ -130,147 +139,103 @@
   <div class="ceo-text">
     <h2 class="ceo-title">
       <a href="about.html">About the CEO</a>
-    </h2>
+    <!-- About Section -->
+    <h2>AI Expert | Soft. Engineer<br>Keynote Speaker EMCEE: Master of Ceremony (MC)</h2>
     <p>
-      I am an expert in Artificial Intelligence with a strong background in data
-      science, software development, and digital transformation. I specialize in
-      creating AI solutions that emphasize ethical, transparent, and
-      human-centered approaches. My experience covers software engineering, AI
-      education, and Ethics. As a Public speaker and EMCEE, I captivate
-      audiences with thought-provoking messages, encouraging both individuals
-      and companies to embrace the ethical dimensions of AI towards a future
-      that benefits everyone.
+      I am a founder of <strong>EMEA Venture Builder</strong>. I am a Data Scientist, Full-Stack Web Developer, and Economist. I empower companies to develop and implement fair, transparent, and <span style="color:#f94d00;"><strong>responsible</strong></span> artificial Intelligence.
     </p>
+    <p>
+      As a keynote speaker and Master of Ceremonies (MoC), I captivate audiences with thought-provoking messages, ensure the events flow seamlessly, and highlight key moments with professionalism.
+    </p>
+    <p>
+      My academic achievements include two Master's degrees: one in Business and Research (MSc) from the University of Barcelona in Spain, and another in Economy and Management (MSc) from the University of Annecy in France. I’ve further complemented my education with diplomas in Data Science and Full-Stack Web Development.
+    
+    </div>
   </div>
-</div>
-
-<!-- Projects Section -->
- <section id="projects">
-  <h2>Projects</h2>
 </section>
-<div class="projects-section">
-  <h2>Projects</h2>
-  <div class="projects-grid">
-    <div class="project-tile">Project 1</div>
-    <div class="project-tile">Project 2</div>
-    <div class="project-tile">Project 3</div>
-    <div class="project-tile">Project 4</div>
-    <div class="project-tile">Project 5</div>
-    <div class="project-tile">Project 6</div>
-  </div>
-</div>
-<!-- Contact Me Section -->
 
-<div class="contact-me">
-  <h2>Contact Me</h2>
-<section id="contacts">
-  <h2>Contacts</h2>
+
+<!-- Services Section -->
+<section id="services" class="services-section">
+  <h2 class="section-title">My Services</h2>
+  <div class="services-grid">
+    <div class="service-box">
+      <img src="https://lh3.googleusercontent.com/d/1CRwvo8OsiOqTcSKYyPNLwL9NsOrGlIor" alt="AI Ethics" class="service-icon" />
+      <h3>AI Ethics Training</h3>
+      <p>I deliver in-company workshops focusing on how to build unbiased datasets, algorithmic fairness, transparent AI, and compliance with EU regulations.</p>
+    </div>
+    <div class="service-box">
+      <img src="https://lh3.googleusercontent.com/d/1IGDGmkstxAFyY1Hr5XfDhQ_7Axf9hCL-" alt="ML Automation" class="service-icon" />
+      <h3>ML, Data Automation</h3>
+      <p>I write programming code to optimize data workflows. I build custom ETL (Extract, Transform, Load) pipelines to ensure data quality and accessibility for AI development.</p>
+    </div>
+    <div class="service-box">
+      <img src="https://lh3.googleusercontent.com/d/1_1HDx7k8FDVB_edZS_Hb68BinI6EkFD8" alt="Explainable AI" class="service-icon" />
+      <h3>Explainable AI Development</h3>
+      <p>I train AI models with techniques that prioritize clean, unbiased data and mitigate algorithmic bias through rigorous validation.</p>
+    </div>
+    <div class="service-box">
+      <img src="https://lh3.googleusercontent.com/d/1NC02QtaoLVKhBJsL1t_FLTZC2GIx_A64" alt="Responsible AI" class="service-icon" />
+      <h3>Responsible AI Consultancy</h3>
+      <p>I solve business challenges with AI solutions for automation, object tracking, and risk assessment—trained on real-world data.</p>
+    </div>
+    <div class="service-box">
+      <img src="https://lh3.googleusercontent.com/d/1RAt21Zq7MO6sW9QGKj8T9BbhkIwQeubC" alt="App Development" class="service-icon" />
+      <h3>Intelligent App Development</h3>
+      <p>I build custom AI-powered mobile apps for iOS and Android using advanced machine learning models tailored to the client’s goals.</p>
+    </div>
+    <div class="service-box">
+      <img src="https://lh3.googleusercontent.com/d/15cwOKvhiYFtT9TEmmcPEAFKCw-ePquML" alt="Keynote" class="service-icon" />
+      <h3>Keynote Speaker</h3>
+      <p>I deliver engaging, thought-provoking talks at global conferences, sparking conversations around AI ethics and its economic impact.</p>
+    </div>
+  </div>
 </section>
-  <div class="contact-group">
-    <h3>NEEMA AI</h3>
-    <div class="contact-grid">
-      <div class="contact-item">
-        <img
-          src="https://lh3.googleusercontent.com/d/1G1hjp0lIctaXcHfiyQOQnqSPRIWgCBQY"
-          alt="TikTok"
-        />
-        <p><a href="https://www.tiktok.com/@neema_ai">@Neema AI</a></p>
-      </div>
-      <div class="contact-item">
-        <img
-          src="https://lh3.googleusercontent.com/d/1_aroED7nbeHufAErhReg77xsPjfLj-Kf"
-          alt="LinkedIn"
-        />
-        <p>
-          <a
-            href="https://www.linkedin.com/company/neema-artificial-intelligence/"
-            >@Neema AI</a
-          >
-        </p>
-      </div>
-      <div class="contact-item">
-        <img
-          src="https://lh3.googleusercontent.com/d/1Vltt4kRUvPI5rxw7WyQlZLRqTGUxvZWy"
-          alt="Instagram"
-        />
-        <p>
-          <a
-            href="https://www.instagram.com/neema_ai?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw=="
-            >@neema_ai</a
-          >
-        </p>
-      </div>
+<!-- Skills Section -->
+<section id="skills" class="skills-section">
+  <h2 class="section-title">My Skills</h2>
+  <div class="skills-grid">
+    <div class="skill-box">
+      <span class="skill-percent">90%</span>
+      <p class="skill-label">Machine Learning</p>
+    </div>
+    <div class="skill-box">
+      <span class="skill-percent">99%</span>
+      <p class="skill-label">Python / Java</p>
+    </div>
+    <div class="skill-box">
+      <span class="skill-percent">95%</span>
+      <p class="skill-label">MySQL / React</p>
+    </div>
+    <div class="skill-box">
+      <span class="skill-percent">100%</span>
+      <p class="skill-label">UI / UX Design</p>
     </div>
   </div>
-</div>
+</section>
 
-<div class="contact-group">
-  <h3>Neema</h3>
-  <div class="contact-grid">
-    <div class="contact-item">
-      <img
-        src="https://lh3.googleusercontent.com/d/1APqqHw74OwSblRJLamNf06ElKlKfjB8r"
-        alt="X"
-      />
-      <p><a href="https://x.com/NeemaBal">@Neema Nelly</a></p>
-    </div>
-    <div class="contact-item">
-      <img
-        src="https://lh3.googleusercontent.com/d/1_aroED7nbeHufAErhReg77xsPjfLj-Kf"
-        alt="LinkedIn"
-      />
-      <p>
-        <a href="https://www.linkedin.com/in/neema-balolebwami-nelly-8a2226107/"
-          >@Neema Nelly</a
-        >
-      </p>
-    </div>
-    <div class="contact-item">
-      <img
-        src="https://lh3.googleusercontent.com/d/1Vltt4kRUvPI5rxw7WyQlZLRqTGUxvZWy"
-        alt="Instagram"
-      />
-      <p>
-        <a
-          href="https://www.instagram.com/speaker_nema?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw=="
-          >@speaker_nema</a
-        >
-      </p>
-    </div>
-  </div>
-</div>
-<!--Links to Blog section -->'=='
+<!--Links to Blog section -->
 <!-- Blog Section -->
 <section id="blog">
   <h2>Blog</h2>
-</section>
-  <p>Welcome to my blog! Here, I'll share my thoughts on various topics.</p>
-
+  <p>Welcome to my blog! THis serves as a journal to keep up with my current course updates, speaking arrangements, oppurtunities, and learnings. </p>
   <div class="blog-container">
     <!-- Blog Post Boxes -->
     <div class="blog-post">
-      <img src="image1.jpg" alt="Blog Post 1" />
-      <div class="blog-text">Blog Post 1</div>
+   <iframe src="https://www.linkedin.com/embed/feed/update/urn:li:ugcPost:7334158988302807041?collapsed=1" 
+   height="512" width="504" frameborder="0" allowfullscreen="" title="Embedded post"></iframe>
     </div>
     <div class="blog-post">
-      <img src="image2.jpg" alt="Blog Post 2" />
-      <div class="blog-text">Blog Post 2</div>
+    <iframe src="https://www.linkedin.com/embed/feed/update/urn:li:ugcPost:7311081768646774784?collapsed=1" 
+    height="856" width="504" frameborder="0" allowfullscreen="" title="Embedded post"></iframe>
     </div>
     <div class="blog-post">
-      <img src="image3.jpg" alt="Blog Post 3" />
-      <div class="blog-text">Blog Post 3</div>
+    <iframe src="https://www.linkedin.com/embed/feed/update/urn:li:share:7230162684120379392?collapsed=1" 
+    height="556" width="504" frameborder="0" allowfullscreen="" title="Embedded post"></iframe>
     </div>
     <div class="blog-post">
-      <img src="image4.jpg" alt="Blog Post 4" />
-      <div class="blog-text">Blog Post 4</div>
-    </div>
-    <div class="blog-post">
-      <img src="image5.jpg" alt="Blog Post 5" />
-      <div class="blog-text">Blog Post 5</div>
-    </div>
-    <div class="blog-post">
-      <img src="image6.jpg" alt="Blog Post 6" />
-      <div class="blog-text">Blog Post 6</div>
+    <iframe src="https://www.linkedin.com/embed/feed/update/urn:li:share:7230128397304094720?collapsed=1"
+     height="636" width="504" frameborder="0" allowfullscreen="" title="Embedded post"></iframe>
     </div>
   </div>
 </section>
@@ -278,9 +243,6 @@
 <!-- Show Section -->
 <section id="show">
   <h2>Show</h2>
-</section>
-
-
     Discover highlights from the latest AI discussions, events, and
     presentations.
   </p>
@@ -300,9 +262,18 @@
             <p> Don't have an account? <a href="#">Register</a></p>
         </form>
     </div>
-    </iframe>
+<div id="contacts" class="contact-group">
+    <p>Follow us on:</p>
+    <div style="display: flex; justify-content: center; gap: 15px;">
+        <a href="https://www.linkedin.com/company/neema-artificial-intelligence/" target="_blank">LinkedIn</a>
+        <a href="https://x.com/NeemaBal" target="_blank">X</a>
+        <a href="https://www.instagram.com/neema_ai?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw==" target="_blank">Instagram</a>
+        <a href="https://www.tiktok.com/@neema_ai" target="_blank">TikTok</a>
+      </div>
+  <div class="footer-text">
+    Tel: +34663814246 | Av. Diagonal, 452, Gràcia 08006 Barcelona
   </div>
-</section>
+</footer>
+
 </body>
 </html>
-
