--- a/course.html
+++ b/course.html
@@ -12,13 +12,7 @@
   <!-- NAVIGATION -->
   <nav>
     <div class="nav-links">
-      <a href="index.html">Home</a>
-      <a href="about.html">About</a>
-      <a href="projects.html">Projects</a>
-      <a href="contacts.html">Contacts</a>
-      <a href="blog.html">Blog</a>
-      <a href="show.html">Show</a>
-      <a href="course.html" class="active">Course</a>
+      <a href="filehtml.html">Home</a>
     </div>
   </nav>
 <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@300;500;700&display=swap" rel="stylesheet">
