--- a/filehtml.html
+++ b/filehtml.html
@@ -66,7 +66,6 @@
       src="https://lh3.googleusercontent.com/d/1fScUY6VfCE4Ye2HMeAxs1jdC3geWhYFm"
       alt="Person 5"
     />
-    <img src="image2.jpg" alt="Person 6" />
     <img
       src="https://lh3.googleusercontent.com/d/1cmwehQEA3GPz6oTMc54kG3U5Moa-6la7"
       alt="Person 7"
@@ -131,26 +130,23 @@
     />
   </div>
   <div class="ceo-text">
-    <h2 class="ceo-title">
-      <a href="about.html">About the CEO</a>
-    <!-- About Section -->
-    <h2>AI Expert | Soft. Engineer<br>Keynote Speaker EMCEE: Master of Ceremony (MC)</h2>
+    <h2 class="ceo-title"><a href="about.html">About the CEO</a></h2>
+    <h3>AI Expert | Software Engineer<br>Keynote Speaker & EMCEE (Master of Ceremony)</h3>
     <p>
-     I am a founder of EMEA Venture Builder and NEEMA AI, and a passionate advocate for Artificial Intelligence Ethics, AI that is fair, transparent, and inclusive. My background include software engineering, data science, full-stack web development, and economics.
+      I am the founder of EMEA Venture Builder and NEEMA AI, passionate about building fair, transparent, and inclusive AI. My background spans software engineering, data science, economics, and full-stack web development.
     </p>
     <p>
-      At EMEA Venture Builder, we develop personalized AI-driven software for businesses ranging from task automation, predictive analytics, LLM-powered solutions to custom data intelligence platforms. 
+      At EMEA Venture Builder, I help organizations automate tasks, use predictive analytics, and implement custom LLM-powered solutions. At NEEMA AI, I provide AI ethics training in fairness, privacy, governance, and accountability.
     </p>
-    <p>Through NEEMA AI, I deliver specialized training in AI ethics for organizations and individuals in areas such as algorithmic fairness, data privacy, security, accountability, reliability, and AI governance. I help organizations design and implement responsible AI that aligns with core human values and legal standards.My academic achievements include two Master's degrees: one in Business and Research (MSc) from the University of Barcelona in Spain, and another in Economy and Management (MSc) from the University of Annecy in France. I’ve further complemented my education with diplomas in Data Science and Full-Stack Web Development.
+    <p>
+      I hold two MSc degrees: one in Business & Research (University of Barcelona), another in Economy & Management (University of Annecy), and diplomas in Data Science and Full-Stack Web Development.
     </p>
-    </p>As a keynote speaker and Master of Ceremonies, I engage global audiences with thought-provoking talks on ethical AI. My talks emphasize the urgent need for responsibility in innovation, social impact of machine learning, and the importance of building AI that serves everyone equally.
+    <p>
+      As a keynote speaker and MC, I engage audiences on responsible AI and its social impact. In 2022, I was honored as an Ambassador of Barcelona, and in 2024 named Tech Leader of the Year by Women Who Change the World.
     </p>
-    </p>Academically, I hold two Master’s degrees: an MSc in Business and Research from University of Barcelona (Spain), and an MSc in Economy and Management from University of Annecy (France), along with diplomas in Data Science and Full-Stack Web Development.
-In 2022, I was nominated as an Ambassador of Barcelona by the City Council, and in 2024, I received the honorary Tech Leader of the Year award from Women Who Change the World.
-    </p>
-    </p>I am driven by a single goal: to shape a future where AI empowers and does not exclude people.
-    </div>
   </div>
+</div>
+
 </section>
 
 <!-- Services Section -->
@@ -160,32 +156,34 @@ In 2022, I was nominated as an Ambassador of Barcelona by the City Council, and 
     <div class="service-box">
       <img src="https://lh3.googleusercontent.com/d/1CRwvo8OsiOqTcSKYyPNLwL9NsOrGlIor" alt="AI Ethics" class="service-icon" />
       <h3>AI Ethics Training</h3>
-      <p>I develop software solutions to streamline data operations. I design and maintain ETL (Extract, Transform, Load) systems to reliable, accessible data for AI initiatives.</p>
+      <p>I deliver AI ethics programs focused on fairness, transparency, and accountability to promote safe, inclusive technologies.</p>
     </div>
     <div class="service-box">
       <img src="https://lh3.googleusercontent.com/d/1IGDGmkstxAFyY1Hr5XfDhQ_7Axf9hCL-" alt="ML Automation" class="service-icon" />
       <h3>ML, Data Automation</h3>
-      <p>I write programming code to optimize data workflows. I build custom ETL (Extract, Transform, Load) pipelines to ensure data quality and accessibility for AI development.</p>
+      <p>I code data pipelines and automate workflows to ensure quality, scalable, and accessible data for AI systems.</p>
     </div>
     <div class="service-box">
       <img src="https://lh3.googleusercontent.com/d/1_1HDx7k8FDVB_edZS_Hb68BinI6EkFD8" alt="Explainable AI" class="service-icon" />
       <h3>Explainable AI Development</h3>
-      <p>I develop AI models using strategies that emphasize high-quality, impartial data and address algorithmic bias through testing and experimentation.</p>
+      <p>I build AI models that highlight clarity, reduce bias, and ensure transparent decision-making in real-world systems.</p>
     </div>
     <div class="service-box">
       <img src="https://lh3.googleusercontent.com/d/1NC02QtaoLVKhBJsL1t_FLTZC2GIx_A64" alt="Responsible AI" class="service-icon" />
       <h3>Responsible AI Consultancy</h3>
-      <p>I address business needs by applying AI tools that streamline operations, visual recognition systems, and enable predictive analytics—grounded in real-world data.</p>
+      <p>I advise teams on AI tools that boost efficiency, enable predictive insights, and align with ethical business goals.</p>
     </div>
     <div class="service-box">
       <img src="https://lh3.googleusercontent.com/d/1RAt21Zq7MO6sW9QGKj8T9BbhkIwQeubC" alt="App Development" class="service-icon" />
       <h3>Intelligent App Development</h3>
-      <p>I create tailored AI-driven mobile applications for iOS and Android, leveraging smart models that align with each client’s unique objectives and needs.</p>
+      <p>I create AI-powered mobile apps tailored to your needs, using smart models to drive engagement and personalization.</p>
     </div>
     <div class="service-box">
       <img src="https://lh3.googleusercontent.com/d/1ThgaGnGz1E9-idoPSDSl87dQevzOjB3y" alt="Keynote" class="service-icon" />
       <h3>Keynote Speaker</h3>
-      <p>I present insightful sessions at international forums, sparking thought-provoking conversations on ethical AI, regulatory challenges, and its global economic impact.</p>
+      <p>I speak globally on AI ethics, innovation, and policy, sparking inclusive, forward-thinking conversations worldwide.
+
+</p>
     </div>
   </div>
 </section>
@@ -218,21 +216,24 @@ In 2022, I was nominated as an Ambassador of Barcelona by the City Council, and 
     <div class="card">
       <img src="https://lh3.googleusercontent.com/d/1tVy8Y6riFce1akb_bZFeR-WZGaD8CKn7" alt="Neema speaking" />
       <p>
-        I’ve delivered keynotes at universities and tech conferences on the importance of ethical, inclusive AI. My talks focus on fairness, transparency, and accountability in AI systems to empower responsible innovation.
+        I’ve delivered keynotes on ethical, inclusive AI at globally respected tech conferences and universities, focusing on fairness, transparency, and accountability in AI systems.
       </p>
     </div>
 
     <div class="card">
       <img src="https://lh3.googleusercontent.com/d/1peFjorvM-Rg7-xmIihLz0EsIIAhLAdcr" alt="King Felipe VI" />
       <p>
-        I’ve had the privilege of collaborating with leading voices in AI and ethics, sharing insights alongside global experts and thought leaders. A highlight was being photographed with King Felipe VI of Spain, reflecting the growing recognition of ethical AI on the world stage.
-      </p>
+        I’ve collaborated with global experts on AI and ethics. A highlight was meeting King Felipe VI of Spain, marking rising recognition of responsible AI worldwide in growing demand.
+
+
     </div>
 
     <div class="card">
       <img src="https://lh3.googleusercontent.com/d/1HRKrFo1CQy-AMSl6sqEQlX9IQVpc-Z9c" alt="EU Summit" />
       <p>
-        I’ve spoken on AI ethics and governance at an EU summit, contributing to discussions on policy frameworks that prioritize transparency, accountability, and human rights. My involvement focused on shaping ethical guidelines for AI development across member states.
+        I’ve spoken on AI ethics and governance at the EU summit, shaping frameworks that support transparency, human rights, and ethical AI development across Europe.
+
+
       </p>
   </div>
 </section>
@@ -241,7 +242,7 @@ In 2022, I was nominated as an Ambassador of Barcelona by the City Council, and 
 <!-- Blog Section -->
 <section id="blog">
   <h2>Blog</h2>
-  <p>Welcome to my blog! THis serves as a journal to keep up with my current course updates, speaking arrangements, oppurtunities, and learnings. </p>
+  <p>Welcome to my blog! This journal helps track my course updates, speaking events, new opportunities, and personal growth in tech and ethics. </p>
   <div class="blog-container">
     <!-- Blog Post Boxes -->
     <div class="blog-post">
