--- a/filehtml.html
+++ b/filehtml.html
@@ -1,4 +1,10 @@
-<!-- Google Fonts: Keeping Raleway -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>Neema AI Course</title> 
+</head>
+<body><!-- Google Fonts: Keeping Raleway -->
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@300;500;700&display=swap" rel="stylesheet">
     
     <!-- External CSS -->
