--- a/filehtml.html
+++ b/filehtml.html
@@ -3,8 +3,10 @@
 <head>
   <meta charset="UTF-8">
   <title>Neema AI Course</title> 
+
 </head>
-<body><!-- Google Fonts: Keeping Raleway -->
+<body>
+  <!-- Google Fonts: Keeping Raleway -->
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@300;500;700&display=swap" rel="stylesheet">
     
     <!-- External CSS -->
@@ -136,23 +138,26 @@
     />
   </div>
   <div class="ceo-text">
-    <h2 class="ceo-title"><a href="about.html">About the CEO</a></h2>
-    <h3>AI Expert | Software Engineer<br>Keynote Speaker & EMCEE (Master of Ceremony)</h3>
+    <h2 class="ceo-title">
+      <a href="about.html">About the CEO</a>
+    <!-- About Section -->
+    <h2>AI Expert | Soft. Engineer<br>Keynote Speaker EMCEE: Master of Ceremony (MC)</h2>
     <p>
-      I am the founder of EMEA Venture Builder and NEEMA AI, passionate about building fair, transparent, and inclusive AI. My background spans software engineering, data science, economics, and full-stack web development.
+     I am a founder of EMEA Venture Builder and NEEMA AI, and a passionate advocate for Artificial Intelligence Ethics, AI that is fair, transparent, and inclusive. My background include software engineering, data science, full-stack web development, and economics.
     </p>
     <p>
-      At EMEA Venture Builder, I help organizations automate tasks, use predictive analytics, and implement custom LLM-powered solutions. At NEEMA AI, I provide AI ethics training in fairness, privacy, governance, and accountability.
+      At EMEA Venture Builder, we develop personalized AI-driven software for businesses ranging from task automation, predictive analytics, LLM-powered solutions to custom data intelligence platforms. 
     </p>
-    <p>
-      I hold two MSc degrees: one in Business & Research (University of Barcelona), another in Economy & Management (University of Annecy), and diplomas in Data Science and Full-Stack Web Development.
+    <p>Through NEEMA AI, I deliver specialized training in AI ethics for organizations and individuals in areas such as algorithmic fairness, data privacy, security, accountability, reliability, and AI governance. I help organizations design and implement responsible AI that aligns with core human values and legal standards.My academic achievements include two Master's degrees: one in Business and Research (MSc) from the University of Barcelona in Spain, and another in Economy and Management (MSc) from the University of Annecy in France. I’ve further complemented my education with diplomas in Data Science and Full-Stack Web Development.
     </p>
-    <p>
-      As a keynote speaker and MC, I engage audiences on responsible AI and its social impact. In 2022, I was honored as an Ambassador of Barcelona, and in 2024 named Tech Leader of the Year by Women Who Change the World.
+    </p>As a keynote speaker and Master of Ceremonies, I engage global audiences with thought-provoking talks on ethical AI. My talks emphasize the urgent need for responsibility in innovation, social impact of machine learning, and the importance of building AI that serves everyone equally.
     </p>
+    </p>Academically, I hold two Master’s degrees: an MSc in Business and Research from University of Barcelona (Spain), and an MSc in Economy and Management from University of Annecy (France), along with diplomas in Data Science and Full-Stack Web Development.
+In 2022, I was nominated as an Ambassador of Barcelona by the City Council, and in 2024, I received the honorary Tech Leader of the Year award from Women Who Change the World.
+    </p>
+    </p>I am driven by a single goal: to shape a future where AI empowers and does not exclude people.
+    </div>
   </div>
-</div>
-
 </section>
 
 <!-- Services Section -->
@@ -162,34 +167,32 @@
     <div class="service-box">
       <img src="https://lh3.googleusercontent.com/d/1CRwvo8OsiOqTcSKYyPNLwL9NsOrGlIor" alt="AI Ethics" class="service-icon" />
       <h3>AI Ethics Training</h3>
-      <p>I deliver AI ethics programs focused on fairness, transparency, and accountability to promote safe, inclusive technologies.</p>
+      <p>I develop software solutions to streamline data operations. I design and maintain ETL (Extract, Transform, Load) systems to reliable, accessible data for AI initiatives.</p>
     </div>
     <div class="service-box">
       <img src="https://lh3.googleusercontent.com/d/1IGDGmkstxAFyY1Hr5XfDhQ_7Axf9hCL-" alt="ML Automation" class="service-icon" />
       <h3>ML, Data Automation</h3>
-      <p>I code data pipelines and automate workflows to ensure quality, scalable, and accessible data for AI systems.</p>
+      <p>I write programming code to optimize data workflows. I build custom ETL (Extract, Transform, Load) pipelines to ensure data quality and accessibility for AI development.</p>
     </div>
     <div class="service-box">
       <img src="https://lh3.googleusercontent.com/d/1_1HDx7k8FDVB_edZS_Hb68BinI6EkFD8" alt="Explainable AI" class="service-icon" />
       <h3>Explainable AI Development</h3>
-      <p>I build AI models that highlight clarity, reduce bias, and ensure transparent decision-making in real-world systems.</p>
+      <p>I develop AI models using strategies that emphasize high-quality, impartial data and address algorithmic bias through testing and experimentation.</p>
     </div>
     <div class="service-box">
       <img src="https://lh3.googleusercontent.com/d/1NC02QtaoLVKhBJsL1t_FLTZC2GIx_A64" alt="Responsible AI" class="service-icon" />
       <h3>Responsible AI Consultancy</h3>
-      <p>I advise teams on AI tools that boost efficiency, enable predictive insights, and align with ethical business goals.</p>
+      <p>I address business needs by applying AI tools that streamline operations, visual recognition systems, and enable predictive analytics—grounded in real-world data.</p>
     </div>
     <div class="service-box">
       <img src="https://lh3.googleusercontent.com/d/1RAt21Zq7MO6sW9QGKj8T9BbhkIwQeubC" alt="App Development" class="service-icon" />
       <h3>Intelligent App Development</h3>
-      <p>I create AI-powered mobile apps tailored to your needs, using smart models to drive engagement and personalization.</p>
+      <p>I create tailored AI-driven mobile applications for iOS and Android, leveraging smart models that align with each client’s unique objectives and needs.</p>
     </div>
     <div class="service-box">
       <img src="https://lh3.googleusercontent.com/d/1ThgaGnGz1E9-idoPSDSl87dQevzOjB3y" alt="Keynote" class="service-icon" />
       <h3>Keynote Speaker</h3>
-      <p>I speak globally on AI ethics, innovation, and policy, sparking inclusive, forward-thinking conversations worldwide.
-
-</p>
+      <p>I present insightful sessions at international forums, sparking thought-provoking conversations on ethical AI, regulatory challenges, and its global economic impact.</p>
     </div>
   </div>
 </section>
@@ -222,24 +225,21 @@
     <div class="card">
       <img src="https://lh3.googleusercontent.com/d/1tVy8Y6riFce1akb_bZFeR-WZGaD8CKn7" alt="Neema speaking" />
       <p>
-        I’ve delivered keynotes on ethical, inclusive AI at globally respected tech conferences and universities, focusing on fairness, transparency, and accountability in AI systems.
+        I’ve delivered keynotes at universities and tech conferences on the importance of ethical, inclusive AI. My talks focus on fairness, transparency, and accountability in AI systems to empower responsible innovation.
       </p>
     </div>
 
     <div class="card">
       <img src="https://lh3.googleusercontent.com/d/1peFjorvM-Rg7-xmIihLz0EsIIAhLAdcr" alt="King Felipe VI" />
       <p>
-        I’ve collaborated with global experts on AI and ethics. A highlight was meeting King Felipe VI of Spain, marking rising recognition of responsible AI worldwide in growing demand.
-
-
+        I’ve had the privilege of collaborating with leading voices in AI and ethics, sharing insights alongside global experts and thought leaders. A highlight was being photographed with King Felipe VI of Spain, reflecting the growing recognition of ethical AI on the world stage.
+      </p>
     </div>
 
     <div class="card">
       <img src="https://lh3.googleusercontent.com/d/1HRKrFo1CQy-AMSl6sqEQlX9IQVpc-Z9c" alt="EU Summit" />
       <p>
-        I’ve spoken on AI ethics and governance at the EU summit, shaping frameworks that support transparency, human rights, and ethical AI development across Europe.
-
-
+        I’ve spoken on AI ethics and governance at an EU summit, contributing to discussions on policy frameworks that prioritize transparency, accountability, and human rights. My involvement focused on shaping ethical guidelines for AI development across member states.
       </p>
   </div>
 </section>
@@ -248,21 +248,80 @@
 <!-- Blog Section -->
 <section id="blog">
   <h2>Blog</h2>
-  <p>Welcome to my blog! This journal helps track my course updates, speaking events, new opportunities, and personal growth in tech and ethics. </p>
+  <p>Welcome to my blog! This serves as a journal to keep up with my current course updates, speaking arrangements, opportunities, and learnings.</p>
+
   <div class="blog-container">
-    <!-- Blog Post Boxes -->
+    <!-- Blog Post 1 -->
     <div class="blog-post">
-   <iframe src="https://www.linkedin.com/embed/feed/update/urn:li:ugcPost:7334158988302807041?collapsed=1" 
-   height="512" width="504" frameborder="0" allowfullscreen="" title="Embedded post"></iframe>
+      <h3>Q&A Response</h3>
+      <p>Will major corporations adopt ethical AI practices, and is it imperative to strengthen regulations for compliance? 
+
+
+This question arose during the Q&A.
+
+
+In response, I drew parallels to the rise of sustainability two decades ago when its universal adoption wasn't foreseeable. Similarly, the ethical use of Artificial Intelligence is progressing, and while regulations play a vital role, genuine change requires individuals and corporations to willingly embrace better AI practices without external pressure.
+
+
+🎙️During my keynote at DevCon in Bucharest, I delved into the methods of mitigating algorithmic bias in datasets when training AI models and the strategies to implement ethical principles throughout the entire development lifecycle, including data collection, algorithm processing, and AI deployment.
+
+
+📈 I was truly impressed by the large audience at the two-day event. Deepest appreciation to the entire DevCon team for making it all possible in Bucharest, Romania. 
+
+It was indeed outstanding at DevTalksRomania !</p>
+      <img src="https://lh3.googleusercontent.com/d/1bJWR6i_GIDvLlFu_ndh_y0me8xDUifz4" alt="FutureTech Summit">
     </div>
+
+    <!-- Blog Post 2 -->
     <div class="blog-post">
-    <iframe src="https://www.linkedin.com/embed/feed/update/urn:li:share:7230162684120379392?collapsed=1" 
-    height="556" width="504" frameborder="0" allowfullscreen="" title="Embedded post"></iframe>
+      <h3>Keynote</h3>
+      <p>Who is defeating us with AI ? Is it the machines themselves, or are we: engineers, creators or culprits?
+
+
+This dilemma raises ethical issues.
+
+
+The data we input into AI models is often biased. Consider the scenario of teaching a robot to make decisions; if it learns from a single source with one perspective, it may develop a limited understanding of how things work. This is the consequence of training AI models with non-diverse information.
+
+
+To address this issue, we should ensure that, data we use is a fair representation of all individuals, encompassing various identities and backgrounds. This approach can enable AI to learn and apply algorithmic fairness.
+
+
+Transparency should serve as the guiding principle, providing a clear path to trace the journey of data, understanding its origins, the alterations it undergoes, and its evolution over time. 
+
+
+And when gathering data from various sources, it's crucial to keep users informed about the collection process and have clear options to consent or opt out. This commitment to privacy should extend from the initial data collection stage through to the point where AI algorithms process the information and make decisions based on it.
+
+
+Data security is a collective duty. We need to develop and deploy our AI technologies with security to prevent unwanted manipulations and activities that might cause breaches.
+
+
+Let us strive to create technology all the while recognizing our shared responsibility, ensuring that none of the principles of AI ethics are compromised.
+
+
+I had the honor of delivering this keynote where I emphasized the significance of AI ethics and the necessity of harnessing the full potential of AI at TechBBQ, the largest tech event in the Nordics, that was held in Copenhagen.</p>
+      <img src="https://lh3.googleusercontent.com/d/16i117SRejoIWkC4Lir0z-XS0FBZd9zY0" alt="Course Launch">
     </div>
+
+    <!-- Blog Post 3 -->
     <div class="blog-post">
-    <iframe src="https://www.linkedin.com/embed/feed/update/urn:li:share:7230128397304094720?collapsed=1"
-     height="636" width="504" frameborder="0" allowfullscreen="" title="Embedded post"></iframe>
+      <h3>Gen AI Summit</h3>
+      <p>✨ Gen AI Summit EU was enriching !
+
+The summit focused on the transformative power of Generative AI, its practical applications, and ethics.
+
+
+It was a great honor to be the Master of Ceremonies for two days at Gen AI Summit EU, which took place in Valencia. 
+
+
+Special thanks to the organizer Julieta Zalduendo for bringing together distinguished experts who are shaping the future of technology.
+
+
+Muchas gracias Julieta por esta experiencia inolvidable! Fue un honor formar parte de este evento tan especial, lleno de inspiración!</p>
+      <img src="https://lh3.googleusercontent.com/d/1ZsfkHWTa3nsMEebZN5PBmGiZs18r7-yd" alt="Community Workshop">
     </div>
+  </div>
+</section>
   </div>
 </section>
 
