--- a/filehtml.html
+++ b/filehtml.html
@@ -47,6 +47,14 @@
     <img src="https://lh3.googleusercontent.com/d/1DxySrYLdWaalAIsdQc2ojHF5gTM7slgi" alt="Slide 3">
     <img src="https://lh3.googleusercontent.com/d/1ENs10V3ZsZkbedtImTNJ6HQdwTHTPlbj" alt="Slide 4">
     <img src="https://lh3.googleusercontent.com/d/1aGA7ccc6HrAHox0YJwX-LEYvkHqzeX0Q" alt="Slide 5">
+
+      <!-- Duplicate set for seamless scroll -->
+    <img src="https://lh3.googleusercontent.com/d/1Q51wbiIk4MA0xJpvkaGBET2hLqr_OjvX" alt="Slide 1">
+    <img src="https://lh3.googleusercontent.com/d/1MtREDtY4_XoFdL6HZmtwZNa02yJz6ju3" alt="Slide 2">
+    <img src="https://lh3.googleusercontent.com/d/1DxySrYLdWaalAIsdQc2ojHF5gTM7slgi" alt="Slide 3">
+    <img src="https://lh3.googleusercontent.com/d/1ENs10V3ZsZkbedtImTNJ6HQdwTHTPlbj" alt="Slide 4">
+    <img src="https://lh3.googleusercontent.com/d/1aGA7ccc6HrAHox0YJwX-LEYvkHqzeX0Q" alt="Slide 5">
+
   </div>
 </section>
 
