--- a/filehtml.html
+++ b/filehtml.html
@@ -42,28 +42,43 @@
     <a href="https://www.linkedin.com/in/neema-balolebwami-nelly-8a2226107/" class="hero-btn">LinkedIn</a>
   </div>
   <div class="hero-scroll-images">
+    <!-- New images for the slideshow -->
+    <img src="https://lh3.googleusercontent.com/d/1V5TioA8tBH2CoiXBLSnlhm7Hn181gI9X" alt="Neema Slide 1">
+    <img src="https://lh3.googleusercontent.com/d/1Rkkejw0F8v7cHCS_NPBrssrvHcQud31t" alt="Neema Slide 4">
+    <img src="https://lh3.googleusercontent.com/d/1gDc9hgDaJOAbBz4dlFIQsCDV2aKncxe2" alt="Neema Slide 5">
+
+
+
     <img src="https://lh3.googleusercontent.com/d/1Q51wbiIk4MA0xJpvkaGBET2hLqr_OjvX" alt="Slide 1">
     <img src="https://lh3.googleusercontent.com/d/1MtREDtY4_XoFdL6HZmtwZNa02yJz6ju3" alt="Slide 2">
-    <img src="https://lh3.googleusercontent.com/d/1DxySrYLdWaalAIsdQc2ojHF5gTM7slgi" alt="Slide 3">
-    <img src="https://lh3.googleusercontent.com/d/1ENs10V3ZsZkbedtImTNJ6HQdwTHTPlbj" alt="Slide 4">
     <img src="https://lh3.googleusercontent.com/d/1aGA7ccc6HrAHox0YJwX-LEYvkHqzeX0Q" alt="Slide 5">
       <!-- Duplicate set for seamless scroll -->
+      <!-- New images for the slideshow -->
+    <img src="https://lh3.googleusercontent.com/d/1V5TioA8tBH2CoiXBLSnlhm7Hn181gI9X" alt="Neema Slide 1">
+    <img src="https://lh3.googleusercontent.com/d/1Rkkejw0F8v7cHCS_NPBrssrvHcQud31t" alt="Neema Slide 4">
+    <img src="https://lh3.googleusercontent.com/d/1gDc9hgDaJOAbBz4dlFIQsCDV2aKncxe2" alt="Neema Slide 5">
+
+      
     <img src="https://lh3.googleusercontent.com/d/1Q51wbiIk4MA0xJpvkaGBET2hLqr_OjvX" alt="Slide 1">
     <img src="https://lh3.googleusercontent.com/d/1MtREDtY4_XoFdL6HZmtwZNa02yJz6ju3" alt="Slide 2">
-    <img src="https://lh3.googleusercontent.com/d/1DxySrYLdWaalAIsdQc2ojHF5gTM7slgi" alt="Slide 3">
-    <img src="https://lh3.googleusercontent.com/d/1ENs10V3ZsZkbedtImTNJ6HQdwTHTPlbj" alt="Slide 4">
     <img src="https://lh3.googleusercontent.com/d/1aGA7ccc6HrAHox0YJwX-LEYvkHqzeX0Q" alt="Slide 5">
           <!-- Duplicate set for seamless scroll -->
+    <img src="https://lh3.googleusercontent.com/d/1V5TioA8tBH2CoiXBLSnlhm7Hn181gI9X" alt="Neema Slide 1">
+    <img src="https://lh3.googleusercontent.com/d/1Rkkejw0F8v7cHCS_NPBrssrvHcQud31t" alt="Neema Slide 4">
+    <img src="https://lh3.googleusercontent.com/d/1gDc9hgDaJOAbBz4dlFIQsCDV2aKncxe2" alt="Neema Slide 5">
+
+          
     <img src="https://lh3.googleusercontent.com/d/1Q51wbiIk4MA0xJpvkaGBET2hLqr_OjvX" alt="Slide 1">
     <img src="https://lh3.googleusercontent.com/d/1MtREDtY4_XoFdL6HZmtwZNa02yJz6ju3" alt="Slide 2">
-    <img src="https://lh3.googleusercontent.com/d/1DxySrYLdWaalAIsdQc2ojHF5gTM7slgi" alt="Slide 3">
-    <img src="https://lh3.googleusercontent.com/d/1ENs10V3ZsZkbedtImTNJ6HQdwTHTPlbj" alt="Slide 4">
     <img src="https://lh3.googleusercontent.com/d/1aGA7ccc6HrAHox0YJwX-LEYvkHqzeX0Q" alt="Slide 5">
       <!-- Duplicate set for seamless scroll -->
+    <img src="https://lh3.googleusercontent.com/d/1V5TioA8tBH2CoiXBLSnlhm7Hn181gI9X" alt="Neema Slide 1">
+    <img src="https://lh3.googleusercontent.com/d/1Rkkejw0F8v7cHCS_NPBrssrvHcQud31t" alt="Neema Slide 4">
+    <img src="https://lh3.googleusercontent.com/d/1gDc9hgDaJOAbBz4dlFIQsCDV2aKncxe2" alt="Neema Slide 5">
+
+
     <img src="https://lh3.googleusercontent.com/d/1Q51wbiIk4MA0xJpvkaGBET2hLqr_OjvX" alt="Slide 1">
     <img src="https://lh3.googleusercontent.com/d/1MtREDtY4_XoFdL6HZmtwZNa02yJz6ju3" alt="Slide 2">
-    <img src="https://lh3.googleusercontent.com/d/1DxySrYLdWaalAIsdQc2ojHF5gTM7slgi" alt="Slide 3">
-    <img src="https://lh3.googleusercontent.com/d/1ENs10V3ZsZkbedtImTNJ6HQdwTHTPlbj" alt="Slide 4">
     <img src="https://lh3.googleusercontent.com/d/1aGA7ccc6HrAHox0YJwX-LEYvkHqzeX0Q" alt="Slide 5">
 
 
