changed backgrounds to black

--- a/filehtml.html
+++ b/filehtml.html
@@ -147,9 +147,8 @@
       alt="Person 19"
     />
   </div>
+</div>
 <!-- About the CEO Section -->
-<section id="about">
-</section>
 <div class="about-ceo">
   <div class="ceo-photo">
     <img
